Fixed Homepage, Added summary and skills

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1967,7 +1967,7 @@ input, select, textarea {
 			display: block;
 			font-weight: 700;
 			letter-spacing: 0.25em;
-			font-size: 0.9em;
+			font-size: 1.2em;
 			width: 25em;
 			height: 3.25em;
 			top: -3.25em;
@@ -2002,13 +2002,13 @@ input, select, textarea {
 			}
 
 		.wrapper.style1 {
-			background: #e97770 url("images/overlay.png");
+			background: #496e8c url("images/overlay.png");
 			color: #eee;
 			color: rgba(255, 255, 255, 0.75);
 		}
 
 			.wrapper.style1 .title {
-				background: #e97770 url("images/overlay.png");
+				background: #496e8c url("images/overlay.png");
 				color: #fff;
 			}
 
@@ -2060,7 +2060,7 @@ input, select, textarea {
 		-ms-justify-content: center;
 		justify-content: center;
 		position: relative;
-		height: 24em;
+		height: 12em;
 		background: url("../../images/banner.jpg") center center;
 		background-size: cover;
 		padding: 0;
@@ -2077,7 +2077,7 @@ input, select, textarea {
 		}
 
 		.homepage #header {
-			height: 35em;
+			height: 25em;
 		}
 
 /* Logo */
@@ -2093,7 +2093,7 @@ input, select, textarea {
 			font-weight: 900;
 			text-transform: uppercase;
 			color: #fff;
-			font-size: 2em;
+			font-size: 3em;
 			letter-spacing: 0.25em;
 		}
 
@@ -2104,7 +2104,7 @@ input, select, textarea {
 			margin: 1.25em 0 0 0;
 			display: block;
 			letter-spacing: 0.2em;
-			font-size: 0.9em;
+			font-size: 1.25em;
 		}
 
 /* Nav */
@@ -2226,23 +2226,29 @@ input, select, textarea {
 			color: #fff;
 			border-radius: 0.35em;
 			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
-			font-size: 2.75em;
+			font-size: 1.5em;
 			letter-spacing: 0.075em;
 			line-height: 1.35em;
 			padding: 1em 0 1em 0;
 			margin-bottom: 1em;
 		}
 
-			#intro p.style2 a {
-				color: inherit;
-				text-decoration: none;
-			}
+        #intro p.style2 a {
+            color: inherit;
+            text-decoration: none;
+        }
 
-		#intro p.style3 {
-			font-size: 1.1em;
-			width: 48em;
-			margin: 0 auto;
-		}
+		#intro ul.style3 {
+          text-align: left; /* Ensures list items are left-justified */
+          margin: 0 auto; /* Center the ul element itself if needed */
+          padding: 0;
+          list-style-position: inside; /* Adjusts the position of the bullet points */
+        }
+
+        #intro ul.style3 li {
+          font-size: 1.1em;
+          margin-bottom: 0.5em; /* Adds some space between list items */
+        }
 
 /* Features */
 
