--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1608,6 +1608,7 @@ input, select, textarea {
 		.image.centered {
 			display: block;
 			margin: 0 0 2em 0;
+			border: 2px solid #000;
 		}
 
 			.image.centered img {
