--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,10 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
+	.indent{
+	    padding-left: 1.5em;
+	}
+
 /* Container */
 
 	.container {
